--- a/main.html
+++ b/main.html
@@ -8,6 +8,15 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="hero">
+		<img src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Hero Image" class="hero-image">
+		<div class="hero-content">
+			<h1>Welcome to my Home</h1>
+			<p>Home is where the heart is, and within the sanctuary of our homes lies a special place that holds memories, shelter, and comfort – my house.</p>
+			<a href="https://www.geeksforgeeks.org/essay-on-my-house/" class="explore-btn">Explore Now</a>
+			
+		</div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
